<resources>
    <string name="app_name">Property Manager</string>
    <string name="action_settings">Settings</string>
    <string name="create_btn_txt">create</string>
    <string name="next_btn_txt">Next</string>
    <string name="sq_foot">10</string>
    <string name="address_lbl_txt">Address</string>
    <string name="city_lbl_txt">City</string>
    <string name="description_lbl_txt">Description</string>
    <string name="name_lbl_txt">Name</string>
    <string name="name_no__lbl_txt">Name/No</string>
    <string name="property_type_txt">Property Type</string>
    <string name="sq_footage__lbl_txt">Sq.footage</string>
    <string name="street_name__lbl_txt">Street Name</string>
    <string name="tenantsText">Tenants</string>
    <string name="createText">Create</string>

    <string-array name="types">
        <item>Apartment</item>
        <item>Boarding Place</item>

    </string-array>

    <string-array name="usertypes">
        <item>Landloard</item>
        <item>Tenant</item>

    </string-array>

    <string-array name="payment_types">
        <item>Rental</item>
        <item>Deposit</item>

    </string-array>

    <string-array name="apartments">
        <item>moratwa</item>
        <item>Colombo</item>
        <item>Kottawa</item>

    </string-array>
    <string name="title_activity_view__tenants_info">View_Tenants_info</string>
    <string name="title_activity_payment_info">View_Tenants_info</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Nametxt">TextView</string>

    <string-array name="apartment_list">
        <item>Apartment1</item>
        <item>Apartment2</item>
        <item>Apartment3</item>
        <item>Apartment4</item>
        <item>Apartment5</item>
    </string-array>
    <string name="title_activity_add_property">AddProperty</string>
    <string name="title_activity_alerts_info">AlertsInfo</string>
</resources>
