<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="@string/address_lbl_txt"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/lblAddress"
/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Name/No"
        android:id="@+id/txtNo"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/street_name__lbl_txt"
        android:id="@+id/txtStreet"
/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/city_lbl_txt"
        android:id="@+id/txtCity"
 />

    <TextView
        android:text="@string/property_type_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
/>

    <TextView
        android:text="@string/sq_footage__lbl_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"

        android:id="@+id/txtFootage"
/>

    <TextView
        android:text="@string/description_lbl_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblDesc"
/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:id="@+id/txtDesc"
        />

    <Button
        android:text="@string/next_btn_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnNext"
/>

</LinearLayout>