<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/street_name__lbl_txt"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:id="@+id/txtStreet"
        android:layout_below="@+id/txtNo"
        android:layout_alignLeft="@+id/txtNo"
        android:layout_alignStart="@+id/txtNo"
        android:textSize="14sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/city_lbl_txt"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/txtCity"
        android:layout_below="@+id/txtStreet"
        android:layout_alignLeft="@+id/txtStreet"
        android:layout_alignStart="@+id/txtStreet"
        android:textSize="14sp" />

    <TextView
        android:text="@string/property_type_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/textView2"
        android:layout_below="@+id/txtCity"
        android:layout_alignLeft="@+id/txtCity"
        android:layout_alignStart="@+id/txtCity" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/sq_foot"
        android:ems="10"
        android:id="@+id/txtFootage"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/txtDesc"
        android:layout_below="@+id/lblDesc"
        android:layout_alignLeft="@+id/lblDesc"
        android:layout_alignStart="@+id/lblDesc"
        android:layout_marginTop="6dp"
        />

    <Button
        android:text="@string/next_btn_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:id="@+id/btnNext"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="17dp"
        android:layout_marginEnd="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/name_no__lbl_txt"
        android:ems="10"
        android:id="@+id/txtNo"
        android:textSize="14sp"
        android:layout_below="@+id/lblAddress"
        android:layout_alignLeft="@+id/lblAddress"
        android:layout_alignStart="@+id/lblAddress" />

    <TextView
        android:text="@string/address_lbl_txt"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="3dp"
        android:id="@+id/lblAddress"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/description_lbl_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/lblDesc"
        android:layout_below="@+id/txtFootage"
        android:layout_alignLeft="@+id/txtFootage"
        android:layout_alignStart="@+id/txtFootage" />

    <TextView
        android:text="@string/sq_footage__lbl_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/spinner"
        android:layout_alignLeft="@+id/spinner"
        android:layout_alignStart="@+id/spinner" />

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/toolbar3"
        app:title="Add New Property"/>


</RelativeLayout>